// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Columns Snapshot default 1`] = `
<div
  class="chartdiv"
  style="position: relative;"
>
  <div
    class="resize-sensor"
    dir="ltr"
    style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
  >
    <div
      class="resize-sensor-expand"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s;"
      />
    </div>
    <div
      class="resize-sensor-shrink"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
      />
    </div>
  </div>
  <div
    style="width: 100%; height: 100%; position: relative;"
  >
    <svg
      role="group"
      style="width: 100%; height: 100%; overflow: visible;"
      version="1.1"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <desc>
        JavaScript chart by amCharts
      </desc>
      <defs>
        <clippath
          id="id-46"
        >
          <rect
            height="NaN"
            width="NaN"
          />
        </clippath>
        <filter
          height="200%"
          id="filter-id-51"
          width="200%"
          x="-50%"
          y="-50%"
        >
          <fegaussianblur
            in="SourceGraphic"
            result="blurOut"
            stdDeviation="1.5"
          />
          <feoffset
            dx="1"
            dy="1"
            result="offsetBlur"
          />
          <feflood
            flood-color="#000000"
            flood-opacity="0.5"
          />
          <fecomposite
            in2="offsetBlur"
            operator="in"
          />
          <femerge>
            <femergenode />
            <femergenode
              in="SourceGraphic"
            />
          </femerge>
        </filter>
        <filter
          height="120%"
          id="filter-id-66"
          width="120%"
          x="-10%"
          y="-10%"
        >
          <fecolormatrix
            type="saturate"
            values="0"
          />
        </filter>
        <lineargradient
          id="gradient-id-69"
          x1="1%"
          x2="99%"
          y1="59%"
          y2="41%"
        >
          <stop
            offset="0"
            stop-color="#474758"
          />
          <stop
            offset="0.75"
            stop-color="#474758"
            stop-opacity="1"
          />
          <stop
            offset="0.755"
            stop-color="#3cabff"
            stop-opacity="1"
          />
        </lineargradient>
        <filter
          height="200%"
          id="filter-id-78"
          width="200%"
          x="-50%"
          y="-50%"
        />
        <filter
          height="200%"
          id="filter-id-99"
          width="200%"
          x="-50%"
          y="-50%"
        />
        <clippath
          id="id-132"
        />
        <filter
          height="200%"
          id="filter-id-137"
          width="200%"
          x="-50%"
          y="-50%"
        >
          <fegaussianblur
            in="SourceGraphic"
            result="blurOut"
            stdDeviation="1.5"
          />
          <feoffset
            dx="1"
            dy="1"
            result="offsetBlur"
          />
          <feflood
            flood-color="#000000"
            flood-opacity="0.5"
          />
          <fecomposite
            in2="offsetBlur"
            operator="in"
          />
          <femerge>
            <femergenode />
            <femergenode
              in="SourceGraphic"
            />
          </femerge>
        </filter>
        <clippath
          id="id-150"
        />
        <filter
          height="200%"
          id="filter-id-155"
          width="200%"
          x="-50%"
          y="-50%"
        >
          <fegaussianblur
            in="SourceGraphic"
            result="blurOut"
            stdDeviation="1.5"
          />
          <feoffset
            dx="1"
            dy="1"
            result="offsetBlur"
          />
          <feflood
            flood-color="#000000"
            flood-opacity="0.5"
          />
          <fecomposite
            in2="offsetBlur"
            operator="in"
          />
          <femerge>
            <femergenode />
            <femergenode
              in="SourceGraphic"
            />
          </femerge>
        </filter>
        <clippath
          id="id-168"
        />
        <filter
          height="200%"
          id="filter-id-173"
          width="200%"
          x="-50%"
          y="-50%"
        >
          <fegaussianblur
            in="SourceGraphic"
            result="blurOut"
            stdDeviation="1.5"
          />
          <feoffset
            dx="1"
            dy="1"
            result="offsetBlur"
          />
          <feflood
            flood-color="#000000"
            flood-opacity="0.5"
          />
          <fecomposite
            in2="offsetBlur"
            operator="in"
          />
          <femerge>
            <femergenode />
            <femergenode
              in="SourceGraphic"
            />
          </femerge>
        </filter>
      </defs>
      <g>
        <g
          fill="#ffffff"
          fill-opacity="0"
        >
          <rect />
        </g>
        <g>
          <g
            clip-path="url(\\"#id-46\\")"
            role="widget"
          >
            <g>
              <g>
                <g>
                  <g>
                    <g>
                      <g>
                        <g />
                      </g>
                      <g>
                        <g>
                          <g>
                            <g>
                              <g
                                aria-hidden="true"
                              >
                                <g>
                                  <g
                                    fill="#000000"
                                  >
                                    <g />
                                  </g>
                                  <g
                                    fill="none"
                                    stroke="#000000"
                                    stroke-opacity="0.15"
                                  >
                                    <path />
                                  </g>
                                  <g
                                    fill="none"
                                    stroke="#000000"
                                    stroke-opacity="0"
                                    style="pointer-events: none;"
                                  >
                                    <path />
                                  </g>
                                  <g>
                                    <g>
                                      <g
                                        display="none"
                                        fill="#000000"
                                        fill-opacity="0"
                                        opacity="0"
                                        stroke-opacity="0"
                                        style="pointer-events: none;"
                                      >
                                        <g
                                          style="webkit-user-select: none;"
                                          transform="translate(10,0)"
                                        >
                                          <text
                                            dy="0"
                                            x="0"
                                            y="0"
                                          >
                                            <tspan>
                                              L
                                            </tspan>
                                          </text>
                                        </g>
                                      </g>
                                    </g>
                                  </g>
                                </g>
                              </g>
                            </g>
                          </g>
                          <g>
                            <g
                              fill="#ffffff"
                              fill-opacity="0"
                            >
                              <rect />
                            </g>
                            <g>
                              <g>
                                <g>
                                  <g
                                    fill="#67b7dc"
                                    fill-opacity="1"
                                    role="group"
                                    stroke="#67b7dc"
                                    stroke-opacity="0"
                                  >
                                    <g>
                                      <g
                                        clip-path="url(\\"#id-132\\")"
                                      >
                                        <g>
                                          <g>
                                            <g />
                                          </g>
                                        </g>
                                      </g>
                                      <g />
                                    </g>
                                  </g>
                                  <g
                                    fill="#6794dc"
                                    fill-opacity="1"
                                    role="group"
                                    stroke="#6794dc"
                                    stroke-opacity="0"
                                  >
                                    <g>
                                      <g
                                        clip-path="url(\\"#id-150\\")"
                                      >
                                        <g>
                                          <g>
                                            <g />
                                          </g>
                                        </g>
                                      </g>
                                      <g />
                                    </g>
                                  </g>
                                  <g
                                    fill="#6771dc"
                                    fill-opacity="1"
                                    role="group"
                                    stroke="#6771dc"
                                    stroke-opacity="0"
                                  >
                                    <g>
                                      <g
                                        clip-path="url(\\"#id-168\\")"
                                      >
                                        <g>
                                          <g>
                                            <g />
                                          </g>
                                        </g>
                                      </g>
                                      <g />
                                    </g>
                                  </g>
                                </g>
                              </g>
                              <g>
                                <g>
                                  <g>
                                    <g />
                                  </g>
                                  <g>
                                    <g />
                                  </g>
                                  <g>
                                    <g />
                                  </g>
                                </g>
                              </g>
                              <g
                                aria-hidden="true"
                                focusable="true"
                                opacity="0"
                                role="button"
                                visibility="hidden"
                              >
                                <g
                                  fill="#6794dc"
                                  fill-opacity="1"
                                  stroke="#ffffff"
                                  stroke-opacity="0"
                                >
                                  <path />
                                </g>
                                <g>
                                  <g
                                    fill="#000000"
                                    style="pointer-events: none;"
                                  >
                                    <g />
                                  </g>
                                  <g
                                    stroke="#ffffff"
                                    style="pointer-events: none;"
                                  >
                                    <path
                                      d=" M0,0  L11,0 "
                                    />
                                  </g>
                                </g>
                              </g>
                              <g>
                                <g>
                                  <g>
                                    <g />
                                  </g>
                                  <g>
                                    <g />
                                  </g>
                                </g>
                              </g>
                              <g>
                                <g />
                              </g>
                              <g>
                                <g />
                              </g>
                              <g>
                                <g />
                              </g>
                              <g>
                                <g />
                              </g>
                            </g>
                          </g>
                          <g>
                            <g />
                          </g>
                        </g>
                      </g>
                      <g>
                        <g>
                          <g
                            aria-hidden="true"
                          >
                            <g>
                              <g
                                fill="#000000"
                              >
                                <g />
                              </g>
                              <g
                                display="none"
                                fill="none"
                                stroke="#000000"
                                stroke-opacity="0.15"
                              >
                                <path />
                              </g>
                              <g
                                fill="none"
                                stroke="#000000"
                                stroke-opacity="0"
                                style="pointer-events: none;"
                              >
                                <path />
                              </g>
                              <g>
                                <g>
                                  <g
                                    fill="#000000"
                                    fill-opacity="0"
                                    opacity="0"
                                    stroke-opacity="0"
                                    style="pointer-events: none;"
                                  >
                                    <g
                                      style="webkit-user-select: none;"
                                      transform="translate(0,10)"
                                    >
                                      <text
                                        dy="0"
                                        x="0"
                                        y="0"
                                      >
                                        <tspan>
                                          L
                                        </tspan>
                                      </text>
                                    </g>
                                  </g>
                                </g>
                              </g>
                            </g>
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </g>
          </g>
          <g>
            <g>
              <g
                opacity="0"
                role="tooltip"
                visibility="hidden"
              >
                <g
                  fill="#ffffff"
                  fill-opacity="0.9"
                  filter="url(\\"#filter-id-51\\")"
                  stroke="#ffffff"
                  stroke-opacity="1"
                  stroke-width="1"
                  style="pointer-events: none;"
                >
                  <path />
                </g>
                <g>
                  <g
                    fill="#ffffff"
                    style="pointer-events: none;"
                  >
                    <g
                      transform="translate(0,7)"
                    />
                  </g>
                </g>
              </g>
              <g
                visibility="hidden"
              >
                <g
                  fill="#ffffff"
                  opacity="1"
                >
                  <rect />
                </g>
                <g>
                  <g>
                    <g>
                      <g
                        fill="#f3f3f3"
                        fill-opacity="0.8"
                        stroke-opacity="1"
                      >
                        <g>
                          <g />
                        </g>
                      </g>
                      <g
                        fill="#000000"
                        fill-opacity="0.2"
                        stroke-opacity="1"
                      >
                        <g>
                          <g />
                        </g>
                      </g>
                      <g
                        fill="#000000"
                        fill-opacity="0.4"
                      >
                        <g />
                      </g>
                    </g>
                  </g>
                </g>
              </g>
              <g
                aria-labelledby="id-66-title"
                filter="url(\\"#filter-id-66\\")"
                opacity="0.3"
                style="cursor: pointer;"
              >
                <g
                  fill="#ffffff"
                  opacity="0"
                >
                  <rect />
                </g>
                <g>
                  <g
                    fill="none"
                    shape-rendering="auto"
                    stroke="#3cabff"
                    stroke-opacity="1"
                    stroke-width="1.7999999999999998"
                  >
                    <path
                      d=" M15,15  C17.4001,15 22.7998,15.0001 27,15 C31.2002,14.9999 33.2999,6 36,6 C38.7001,6 38.6999,10.5 40.5,10.5 C42.3001,10.5 42.2999,6 45,6 C47.7001,6 50.9999,14.9999 54,15 C57.0002,15.0001 58.7999,15 60,15"
                    />
                  </g>
                  <g
                    fill="none"
                    shape-rendering="auto"
                    stroke="url(\\"#gradient-id-69\\")"
                    stroke-opacity="1"
                    stroke-width="1.7999999999999998"
                  >
                    <path
                      d=" M6,15  C8.2501,15 9.7498,15.0001 15,15 C20.2502,14.9999 20.7748,3.6 27,3.6 C33.2252,3.6 33.8998,14.9999 39.9,15 C45.9002,15.0001 45.9748,15 51,15 C56.0252,15 57.7499,15 60,15"
                    />
                  </g>
                </g>
                <title
                  id="id-66-title"
                >
                  Chart created using amCharts library
                </title>
              </g>
              <g
                opacity="0"
                role="tooltip"
                visibility="hidden"
              >
                <g
                  fill="#000000"
                  fill-opacity="1"
                  stroke="#000000"
                  stroke-opacity="1"
                  stroke-width="1"
                  style="pointer-events: none;"
                >
                  <path />
                </g>
                <g>
                  <g
                    fill="#ffffff"
                    style="pointer-events: none;"
                  >
                    <g
                      transform="translate(0,7)"
                    />
                  </g>
                </g>
              </g>
              <g
                opacity="0"
                role="tooltip"
                visibility="hidden"
              >
                <g
                  fill="#000000"
                  fill-opacity="1"
                  stroke="#000000"
                  stroke-opacity="1"
                  stroke-width="1"
                  style="pointer-events: none;"
                >
                  <path />
                </g>
                <g>
                  <g
                    fill="#ffffff"
                    style="pointer-events: none;"
                  >
                    <g
                      transform="translate(0,7)"
                    />
                  </g>
                </g>
              </g>
              <g
                opacity="0"
                role="tooltip"
                visibility="hidden"
              >
                <g
                  fill="#ffffff"
                  fill-opacity="0.9"
                  filter="url(\\"#filter-id-137\\")"
                  stroke="#ffffff"
                  stroke-opacity="1"
                  stroke-width="1"
                  style="pointer-events: none;"
                >
                  <path />
                </g>
                <g>
                  <g
                    fill="#ffffff"
                    style="pointer-events: none;"
                  >
                    <g
                      transform="translate(0,7)"
                    />
                  </g>
                </g>
              </g>
              <g
                opacity="0"
                role="tooltip"
                visibility="hidden"
              >
                <g
                  fill="#ffffff"
                  fill-opacity="0.9"
                  filter="url(\\"#filter-id-155\\")"
                  stroke="#ffffff"
                  stroke-opacity="1"
                  stroke-width="1"
                  style="pointer-events: none;"
                >
                  <path />
                </g>
                <g>
                  <g
                    fill="#ffffff"
                    style="pointer-events: none;"
                  >
                    <g
                      transform="translate(0,7)"
                    />
                  </g>
                </g>
              </g>
              <g
                opacity="0"
                role="tooltip"
                visibility="hidden"
              >
                <g
                  fill="#ffffff"
                  fill-opacity="0.9"
                  filter="url(\\"#filter-id-173\\")"
                  stroke="#ffffff"
                  stroke-opacity="1"
                  stroke-width="1"
                  style="pointer-events: none;"
                >
                  <path />
                </g>
                <g>
                  <g
                    fill="#ffffff"
                    style="pointer-events: none;"
                  >
                    <g
                      transform="translate(0,7)"
                    />
                  </g>
                </g>
              </g>
            </g>
          </g>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Columns Snapshot with format 1`] = `
<div
  class="chartdiv"
  style="position: relative;"
>
  <div
    class="resize-sensor"
    dir="ltr"
    style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
  >
    <div
      class="resize-sensor-expand"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s;"
      />
    </div>
    <div
      class="resize-sensor-shrink"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
      />
    </div>
  </div>
  <div
    style="width: 100%; height: 100%; position: relative;"
  >
    <svg
      role="group"
      style="width: 100%; height: 100%; overflow: visible;"
      version="1.1"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <desc>
        JavaScript chart by amCharts
      </desc>
      <defs>
        <clippath
          id="id-207"
        >
          <rect
            height="NaN"
            width="NaN"
          />
        </clippath>
        <filter
          height="200%"
          id="filter-id-212"
          width="200%"
          x="-50%"
          y="-50%"
        >
          <fegaussianblur
            in="SourceGraphic"
            result="blurOut"
            stdDeviation="1.5"
          />
          <feoffset
            dx="1"
            dy="1"
            result="offsetBlur"
          />
          <feflood
            flood-color="#000000"
            flood-opacity="0.5"
          />
          <fecomposite
            in2="offsetBlur"
            operator="in"
          />
          <femerge>
            <femergenode />
            <femergenode
              in="SourceGraphic"
            />
          </femerge>
        </filter>
        <filter
          height="120%"
          id="filter-id-227"
          width="120%"
          x="-10%"
          y="-10%"
        >
          <fecolormatrix
            type="saturate"
            values="0"
          />
        </filter>
        <lineargradient
          id="gradient-id-230"
          x1="1%"
          x2="99%"
          y1="59%"
          y2="41%"
        >
          <stop
            offset="0"
            stop-color="#474758"
          />
          <stop
            offset="0.75"
            stop-color="#474758"
            stop-opacity="1"
          />
          <stop
            offset="0.755"
            stop-color="#3cabff"
            stop-opacity="1"
          />
        </lineargradient>
        <filter
          height="200%"
          id="filter-id-239"
          width="200%"
          x="-50%"
          y="-50%"
        />
        <filter
          height="200%"
          id="filter-id-260"
          width="200%"
          x="-50%"
          y="-50%"
        />
        <clippath
          id="id-293"
        />
        <filter
          height="200%"
          id="filter-id-298"
          width="200%"
          x="-50%"
          y="-50%"
        >
          <fegaussianblur
            in="SourceGraphic"
            result="blurOut"
            stdDeviation="1.5"
          />
          <feoffset
            dx="1"
            dy="1"
            result="offsetBlur"
          />
          <feflood
            flood-color="#000000"
            flood-opacity="0.5"
          />
          <fecomposite
            in2="offsetBlur"
            operator="in"
          />
          <femerge>
            <femergenode />
            <femergenode
              in="SourceGraphic"
            />
          </femerge>
        </filter>
        <clippath
          id="id-311"
        />
        <filter
          height="200%"
          id="filter-id-316"
          width="200%"
          x="-50%"
          y="-50%"
        >
          <fegaussianblur
            in="SourceGraphic"
            result="blurOut"
            stdDeviation="1.5"
          />
          <feoffset
            dx="1"
            dy="1"
            result="offsetBlur"
          />
          <feflood
            flood-color="#000000"
            flood-opacity="0.5"
          />
          <fecomposite
            in2="offsetBlur"
            operator="in"
          />
          <femerge>
            <femergenode />
            <femergenode
              in="SourceGraphic"
            />
          </femerge>
        </filter>
        <clippath
          id="id-329"
        />
        <filter
          height="200%"
          id="filter-id-334"
          width="200%"
          x="-50%"
          y="-50%"
        >
          <fegaussianblur
            in="SourceGraphic"
            result="blurOut"
            stdDeviation="1.5"
          />
          <feoffset
            dx="1"
            dy="1"
            result="offsetBlur"
          />
          <feflood
            flood-color="#000000"
            flood-opacity="0.5"
          />
          <fecomposite
            in2="offsetBlur"
            operator="in"
          />
          <femerge>
            <femergenode />
            <femergenode
              in="SourceGraphic"
            />
          </femerge>
        </filter>
      </defs>
      <g>
        <g
          fill="#ffffff"
          fill-opacity="0"
        >
          <rect />
        </g>
        <g>
          <g
            clip-path="url(\\"#id-207\\")"
            role="widget"
          >
            <g>
              <g>
                <g>
                  <g>
                    <g>
                      <g>
                        <g />
                      </g>
                      <g>
                        <g>
                          <g>
                            <g>
                              <g
                                aria-hidden="true"
                              >
                                <g>
                                  <g
                                    fill="#000000"
                                  >
                                    <g />
                                  </g>
                                  <g
                                    fill="none"
                                    stroke="#000000"
                                    stroke-opacity="0.15"
                                  >
                                    <path />
                                  </g>
                                  <g
                                    fill="none"
                                    stroke="#000000"
                                    stroke-opacity="0"
                                    style="pointer-events: none;"
                                  >
                                    <path />
                                  </g>
                                  <g>
                                    <g>
                                      <g
                                        display="none"
                                        fill="#000000"
                                        fill-opacity="0"
                                        opacity="0"
                                        stroke-opacity="0"
                                        style="pointer-events: none;"
                                      >
                                        <g
                                          style="webkit-user-select: none;"
                                          transform="translate(10,0)"
                                        >
                                          <text
                                            dy="0"
                                            x="0"
                                            y="0"
                                          >
                                            <tspan>
                                              L
                                            </tspan>
                                          </text>
                                        </g>
                                      </g>
                                    </g>
                                  </g>
                                </g>
                              </g>
                            </g>
                          </g>
                          <g>
                            <g
                              fill="#ffffff"
                              fill-opacity="0"
                            >
                              <rect />
                            </g>
                            <g>
                              <g>
                                <g>
                                  <g
                                    fill="#67b7dc"
                                    fill-opacity="1"
                                    role="group"
                                    stroke="#67b7dc"
                                    stroke-opacity="0"
                                  >
                                    <g>
                                      <g
                                        clip-path="url(\\"#id-293\\")"
                                      >
                                        <g>
                                          <g>
                                            <g />
                                          </g>
                                        </g>
                                      </g>
                                      <g />
                                    </g>
                                  </g>
                                  <g
                                    fill="#6794dc"
                                    fill-opacity="1"
                                    role="group"
                                    stroke="#6794dc"
                                    stroke-opacity="0"
                                  >
                                    <g>
                                      <g
                                        clip-path="url(\\"#id-311\\")"
                                      >
                                        <g>
                                          <g>
                                            <g />
                                          </g>
                                        </g>
                                      </g>
                                      <g />
                                    </g>
                                  </g>
                                  <g
                                    fill="#6771dc"
                                    fill-opacity="1"
                                    role="group"
                                    stroke="#6771dc"
                                    stroke-opacity="0"
                                  >
                                    <g>
                                      <g
                                        clip-path="url(\\"#id-329\\")"
                                      >
                                        <g>
                                          <g>
                                            <g />
                                          </g>
                                        </g>
                                      </g>
                                      <g />
                                    </g>
                                  </g>
                                </g>
                              </g>
                              <g>
                                <g>
                                  <g>
                                    <g />
                                  </g>
                                  <g>
                                    <g />
                                  </g>
                                  <g>
                                    <g />
                                  </g>
                                </g>
                              </g>
                              <g
                                aria-hidden="true"
                                focusable="true"
                                opacity="0"
                                role="button"
                                visibility="hidden"
                              >
                                <g
                                  fill="#6794dc"
                                  fill-opacity="1"
                                  stroke="#ffffff"
                                  stroke-opacity="0"
                                >
                                  <path />
                                </g>
                                <g>
                                  <g
                                    fill="#000000"
                                    style="pointer-events: none;"
                                  >
                                    <g />
                                  </g>
                                  <g
                                    stroke="#ffffff"
                                    style="pointer-events: none;"
                                  >
                                    <path
                                      d=" M0,0  L11,0 "
                                    />
                                  </g>
                                </g>
                              </g>
                              <g>
                                <g>
                                  <g>
                                    <g />
                                  </g>
                                  <g>
                                    <g />
                                  </g>
                                </g>
                              </g>
                              <g>
                                <g />
                              </g>
                              <g>
                                <g />
                              </g>
                              <g>
                                <g />
                              </g>
                              <g>
                                <g />
                              </g>
                            </g>
                          </g>
                          <g>
                            <g />
                          </g>
                        </g>
                      </g>
                      <g>
                        <g>
                          <g
                            aria-hidden="true"
                          >
                            <g>
                              <g
                                fill="#000000"
                              >
                                <g />
                              </g>
                              <g
                                display="none"
                                fill="none"
                                stroke="#000000"
                                stroke-opacity="0.15"
                              >
                                <path />
                              </g>
                              <g
                                fill="none"
                                stroke="#000000"
                                stroke-opacity="0"
                                style="pointer-events: none;"
                              >
                                <path />
                              </g>
                              <g>
                                <g>
                                  <g
                                    fill="#000000"
                                    fill-opacity="0"
                                    opacity="0"
                                    stroke-opacity="0"
                                    style="pointer-events: none;"
                                  >
                                    <g
                                      style="webkit-user-select: none;"
                                      transform="translate(0,10)"
                                    >
                                      <text
                                        dy="0"
                                        x="0"
                                        y="0"
                                      >
                                        <tspan>
                                          L
                                        </tspan>
                                      </text>
                                    </g>
                                  </g>
                                </g>
                              </g>
                            </g>
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </g>
          </g>
          <g>
            <g>
              <g
                opacity="0"
                role="tooltip"
                visibility="hidden"
              >
                <g
                  fill="#ffffff"
                  fill-opacity="0.9"
                  filter="url(\\"#filter-id-212\\")"
                  stroke="#ffffff"
                  stroke-opacity="1"
                  stroke-width="1"
                  style="pointer-events: none;"
                >
                  <path />
                </g>
                <g>
                  <g
                    fill="#ffffff"
                    style="pointer-events: none;"
                  >
                    <g
                      transform="translate(0,7)"
                    />
                  </g>
                </g>
              </g>
              <g
                visibility="hidden"
              >
                <g
                  fill="#ffffff"
                  opacity="1"
                >
                  <rect />
                </g>
                <g>
                  <g>
                    <g>
                      <g
                        fill="#f3f3f3"
                        fill-opacity="0.8"
                        stroke-opacity="1"
                      >
                        <g>
                          <g />
                        </g>
                      </g>
                      <g
                        fill="#000000"
                        fill-opacity="0.2"
                        stroke-opacity="1"
                      >
                        <g>
                          <g />
                        </g>
                      </g>
                      <g
                        fill="#000000"
                        fill-opacity="0.4"
                      >
                        <g />
                      </g>
                    </g>
                  </g>
                </g>
              </g>
              <g
                aria-labelledby="id-227-title"
                filter="url(\\"#filter-id-227\\")"
                opacity="0.3"
                style="cursor: pointer;"
              >
                <g
                  fill="#ffffff"
                  opacity="0"
                >
                  <rect />
                </g>
                <g>
                  <g
                    fill="none"
                    shape-rendering="auto"
                    stroke="#3cabff"
                    stroke-opacity="1"
                    stroke-width="1.7999999999999998"
                  >
                    <path
                      d=" M15,15  C17.4001,15 22.7998,15.0001 27,15 C31.2002,14.9999 33.2999,6 36,6 C38.7001,6 38.6999,10.5 40.5,10.5 C42.3001,10.5 42.2999,6 45,6 C47.7001,6 50.9999,14.9999 54,15 C57.0002,15.0001 58.7999,15 60,15"
                    />
                  </g>
                  <g
                    fill="none"
                    shape-rendering="auto"
                    stroke="url(\\"#gradient-id-230\\")"
                    stroke-opacity="1"
                    stroke-width="1.7999999999999998"
                  >
                    <path
                      d=" M6,15  C8.2501,15 9.7498,15.0001 15,15 C20.2502,14.9999 20.7748,3.6 27,3.6 C33.2252,3.6 33.8998,14.9999 39.9,15 C45.9002,15.0001 45.9748,15 51,15 C56.0252,15 57.7499,15 60,15"
                    />
                  </g>
                </g>
                <title
                  id="id-227-title"
                >
                  Chart created using amCharts library
                </title>
              </g>
              <g
                opacity="0"
                role="tooltip"
                visibility="hidden"
              >
                <g
                  fill="#000000"
                  fill-opacity="1"
                  stroke="#000000"
                  stroke-opacity="1"
                  stroke-width="1"
                  style="pointer-events: none;"
                >
                  <path />
                </g>
                <g>
                  <g
                    fill="#ffffff"
                    style="pointer-events: none;"
                  >
                    <g
                      transform="translate(0,7)"
                    />
                  </g>
                </g>
              </g>
              <g
                opacity="0"
                role="tooltip"
                visibility="hidden"
              >
                <g
                  fill="#000000"
                  fill-opacity="1"
                  stroke="#000000"
                  stroke-opacity="1"
                  stroke-width="1"
                  style="pointer-events: none;"
                >
                  <path />
                </g>
                <g>
                  <g
                    fill="#ffffff"
                    style="pointer-events: none;"
                  >
                    <g
                      transform="translate(0,7)"
                    />
                  </g>
                </g>
              </g>
              <g
                opacity="0"
                role="tooltip"
                visibility="hidden"
              >
                <g
                  fill="#ffffff"
                  fill-opacity="0.9"
                  filter="url(\\"#filter-id-298\\")"
                  stroke="#ffffff"
                  stroke-opacity="1"
                  stroke-width="1"
                  style="pointer-events: none;"
                >
                  <path />
                </g>
                <g>
                  <g
                    fill="#ffffff"
                    style="pointer-events: none;"
                  >
                    <g
                      transform="translate(0,7)"
                    />
                  </g>
                </g>
              </g>
              <g
                opacity="0"
                role="tooltip"
                visibility="hidden"
              >
                <g
                  fill="#ffffff"
                  fill-opacity="0.9"
                  filter="url(\\"#filter-id-316\\")"
                  stroke="#ffffff"
                  stroke-opacity="1"
                  stroke-width="1"
                  style="pointer-events: none;"
                >
                  <path />
                </g>
                <g>
                  <g
                    fill="#ffffff"
                    style="pointer-events: none;"
                  >
                    <g
                      transform="translate(0,7)"
                    />
                  </g>
                </g>
              </g>
              <g
                opacity="0"
                role="tooltip"
                visibility="hidden"
              >
                <g
                  fill="#ffffff"
                  fill-opacity="0.9"
                  filter="url(\\"#filter-id-334\\")"
                  stroke="#ffffff"
                  stroke-opacity="1"
                  stroke-width="1"
                  style="pointer-events: none;"
                >
                  <path />
                </g>
                <g>
                  <g
                    fill="#ffffff"
                    style="pointer-events: none;"
                  >
                    <g
                      transform="translate(0,7)"
                    />
                  </g>
                </g>
              </g>
            </g>
          </g>
        </g>
      </g>
    </svg>
  </div>
</div>
`;
